<resources>
    <string name="app_name">pehlasahiapp</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="mail">Email</string>
    <string name="city">City</string>
</resources>
